# serdejsonpy

./: .gitignore  Cargo.toml  README.md  build.ps1  pyproject.toml  serdejsonpy.pyi  transpiles.json
examples/: example.py
src/: lib.rs
