[package]
name = "serdejsonpy"
version = "0.1.0"
edition = "2021"

[lib]
name = "serdejsonpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pythonize = "0.27.0"
rayon = "1.11.0"
