[build-system]
requires = ["maturin>=1.3"]
build-backend = "maturin"

[project]
name = "serdejsonpy"
version = "0.1.0"
description = "Full-featured Python bindings for serde_json"
authors = [
  { name = "Soumalya", email = "geniussantu1983@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "rich"
]
